addons/dicom/manifests/dicom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orthanc
spec:
  selector:
    app: orthanc
  ports:
    - name: http
      port: 8042
      targetPort: 8042
    - name: dicom
      port: 4242
      targetPort: 4242
